@@ -4,6 +4,7 @@ v 6.8.0
   - Make user search case-insensitive (Christopher Arnold)
   - Remove omniauth-ldap nickname bug workaround
   - Drop all tables before restoring a Postgres backup
+  - Make the repository downloads path configurable
 
 v 6.7.2
   - Fix upgrader script
